<resources>
    <string name="app_name">Restaurants</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_login">Login</string>
    <string name="str_register">Register</string>
    <string name="str_welcome_to_login">Welcome To Login</string>
    <string name="str_username">Username</string>
    <string name="str_milan_gmail_com">milan@gmail.com</string>
    <string name="str_password">Password</string>
    <string name="str_12345678">12345678</string>
    <string name="str_next">Next</string>
    <string name="str_add_review">Add Review</string>
    <string name="str_name">Name :</string>
    <string name="str_restaurant_name_value">Restaurant name value</string>
    <string name="str_address">Address :</string>
    <string name="str_restaurant_address_value">Restaurant address value</string>
    <string name="str_category">Category :</string>
    <string name="str_milan_goyal">Milan Goyal</string>
    <string name="str_awesome_food_and_all">Awesome food and all</string>
    <string name="str_invalid_credentials">Invalid credentials</string>
    <string name="str_user_already_exits">"User already exits</string>
    <string name="str_login_yourself">"Login Yourself</string>
    <string name="str_register_yourself">"Register Yourself</string>
</resources>