<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LandingFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/onboarding_tv_label"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/str_welcome_to_login"
        android:textColor="?attr/colorBlackWhite"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/onboarding_et_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/onboarding_et_username"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:hint="@string/str_username"
        android:text="@string/str_milan_gmail_com"
        app:layout_constraintBottom_toTopOf="@id/onboarding_et_password"
        app:layout_constraintEnd_toEndOf="@id/onboarding_tv_label"
        app:layout_constraintStart_toStartOf="@id/onboarding_tv_label"
        app:layout_constraintTop_toBottomOf="@id/onboarding_tv_label" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/onboarding_et_password"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:hint="@string/str_password"
        android:text="@string/str_12345678"
        app:layout_constraintBottom_toTopOf="@id/onboarding_btn_next"
        app:layout_constraintEnd_toEndOf="@id/onboarding_tv_label"
        app:layout_constraintStart_toStartOf="@id/onboarding_tv_label"
        app:layout_constraintTop_toBottomOf="@id/onboarding_et_username" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/onboarding_btn_next"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="?attr/colorBlackWhite"
        android:textColor="?attr/colorWhiteBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/onboarding_tv_label"
        app:layout_constraintStart_toStartOf="@id/onboarding_tv_label"
        app:layout_constraintTop_toBottomOf="@id/onboarding_et_password"
        tools:text="@string/str_next" />
</androidx.constraintlayout.widget.ConstraintLayout>